# InnoterService

./: .coveragerc  .env.test  .gitignore  Dockerfile  account.yaml  deploymentservice.yaml  docker-compose.test.yaml  docker-compose.yaml  manage.py  pyproject.toml  pytest.ini
.github/workflows/: innoter_service_flow.yml
InnoterService/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
blog/: api_calls.py  authentication.py  middleware.py  models.py  permissions.py  serializers.py  service.py  tasks.py  urls.py  utils.py  views.py
k8s/: k8s.yaml
tests/: .env.test  .test.env  conftest.py
tests/api_testing/: test_pages.py  test_posts.py  test_tags.py
tests/auth_tests/: test_authentication.py  test_permissions.py
tests/utils/: faker.py
